crates/strider-analyze/tests/snapshots/x64__elf_relocs__dispatch_via_table.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "7" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "7" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "12" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "6" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x3fe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← ESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "5" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "3" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "12" -> "3" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" -> "3" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "6" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Mul:u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "12" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1089:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
